[project]
name = "dsui-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deckboard",
    "ha_client",
    "requests>=2.33.1",
]

[tool.uv.sources]
deckboard = { git = "https://github.com/graphras-com/Deckboard.git" }
ha_client = { git = "https://github.com/graphras-com/HAClient.git" }
