[project]
name = "hadeck"
version = "0.1.0"
description = "StreamDeck+ Client for Homeassistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deckui",
    "ha_client",
    "aiohttp>=3.9",
]

[tool.uv.sources]
deckui = { git = "https://github.com/graphras-com/DeckUI.git" }
ha_client = { git = "https://github.com/graphras-com/HAClient.git" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
